--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+### Version 0.6.7 - Beta - 2024-02-23
+
+-   Added **Radar Chart** Support
+
 ### Version 0.6.6 - Beta - 2024-02-23
 
 -   Added **Pie Chart** Support
